add number array

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(SHERMES ${HERMES_BINARY_DIR}/tools/shermes CACHE FILEPATH "shermes tool path")
 
 add_subdirectory(number)
+add_subdirectory(number_array)
